--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -86,11 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of students: 395\n",
+      "Number of features: 31\n",
+      "Number of students who passed: 265\n",
+      "Number of students who failed: 130\n",
+      "Graduation rate of the class: 67.09%\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Calculate number of students\n",
     "n_students = student_data.shape[0]\n",
@@ -105,7 +117,7 @@
     "n_failed = student_data[student_data['passed'] == 'no'].shape[0]\n",
     "\n",
     "# TODO: Calculate graduation rate\n",
-    "grad_rate = None\n",
+    "grad_rate = n_passed*100.0/n_students\n",
     "\n",
     "# Print the results\n",
     "print \"Total number of students: {}\".format(n_students)\n",
