--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -142,11 +142,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature columns:\n",
+      "['school', 'sex', 'age', 'address', 'famsize', 'Pstatus', 'Medu', 'Fedu', 'Mjob', 'Fjob', 'reason', 'guardian', 'traveltime', 'studytime', 'failures', 'schoolsup', 'famsup', 'paid', 'activities', 'nursery', 'higher', 'internet', 'romantic', 'famrel', 'freetime', 'goout', 'Dalc', 'Walc', 'health', 'absences']\n",
+      "\n",
+      "Target column: passed\n",
+      "\n",
+      "Feature values:\n",
+      "  school sex  age address famsize Pstatus  Medu  Fedu     Mjob      Fjob  \\\n",
+      "0     GP   F   18       U     GT3       A     4     4  at_home   teacher   \n",
+      "1     GP   F   17       U     GT3       T     1     1  at_home     other   \n",
+      "2     GP   F   15       U     LE3       T     1     1  at_home     other   \n",
+      "3     GP   F   15       U     GT3       T     4     2   health  services   \n",
+      "4     GP   F   16       U     GT3       T     3     3    other     other   \n",
+      "\n",
+      "    ...    higher internet  romantic  famrel  freetime goout Dalc Walc health  \\\n",
+      "0   ...       yes       no        no       4         3     4    1    1      3   \n",
+      "1   ...       yes      yes        no       5         3     3    1    1      3   \n",
+      "2   ...       yes      yes        no       4         3     2    2    3      3   \n",
+      "3   ...       yes      yes       yes       3         2     2    1    1      5   \n",
+      "4   ...       yes       no        no       4         3     2    1    2      5   \n",
+      "\n",
+      "  absences  \n",
+      "0        6  \n",
+      "1        4  \n",
+      "2       10  \n",
+      "3        2  \n",
+      "4        4  \n",
+      "\n",
+      "[5 rows x 30 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract feature columns\n",
     "feature_cols = list(student_data.columns[:-1])\n",
@@ -182,11 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed feature columns (48 total features):\n",
+      "['school_GP', 'school_MS', 'sex_F', 'sex_M', 'age', 'address_R', 'address_U', 'famsize_GT3', 'famsize_LE3', 'Pstatus_A', 'Pstatus_T', 'Medu', 'Fedu', 'Mjob_at_home', 'Mjob_health', 'Mjob_other', 'Mjob_services', 'Mjob_teacher', 'Fjob_at_home', 'Fjob_health', 'Fjob_other', 'Fjob_services', 'Fjob_teacher', 'reason_course', 'reason_home', 'reason_other', 'reason_reputation', 'guardian_father', 'guardian_mother', 'guardian_other', 'traveltime', 'studytime', 'failures', 'schoolsup', 'famsup', 'paid', 'activities', 'nursery', 'higher', 'internet', 'romantic', 'famrel', 'freetime', 'goout', 'Dalc', 'Walc', 'health', 'absences']\n"
+     ]
+    }
+   ],
    "source": [
     "def preprocess_features(X):\n",
     "    ''' Preprocesses the student data and converts non-numeric binary variables into\n",
@@ -230,25 +274,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set has 296 samples.\n",
+      "Testing set has 99 samples.\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Import any additional functionality you may need here\n",
+    "from sklearn.cross_validation import train_test_split\n",
     "\n",
     "# TODO: Set the number of training points\n",
-    "num_train = None\n",
+    "num_train = 300\n",
     "\n",
     "# Set the number of testing points\n",
     "num_test = X_all.shape[0] - num_train\n",
     "\n",
     "# TODO: Shuffle and split the dataset into the number of training and testing points above\n",
-    "X_train = None\n",
-    "X_test = None\n",
-    "y_train = None\n",
-    "y_test = None\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, test_size=0.25, train_size = 0.75, random_state=42)\n",
     "\n",
     "# Show the results of the split\n",
     "print \"Training set has {} samples.\".format(X_train.shape[0])\n",
@@ -288,7 +339,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "1. Support Vector Machines (SVM)\n",
+    "    - SVM for Protein Fold and Remote Homology Detection - http://www.clopinet.com/SVM.applications.html\n",
+    "    - It has a regularisation parameter, which makes the user think about avoiding over-fitting. It also uses the kernel trick, so you can build in expert knowledge about the problem via engineering the kernel\n",
+    "    - This only really covers the determination of the parameters for a given value of the regularisation and kernel parameters and choice of kernel. In a way the SVM moves the problem of over-fitting from optimising the parameters to model selection.\n",
+    "    - Works well if have multiple dimentions, which is true in our case.\n",
+    "<br><br>\n",
+    "2. K-Nearest Neighbors (KNeighbors)\n",
+    "    - Approach for Predicting Economic Events - http://www.ijera.com/papers/Vol3_issue5/DI35605610.pdf\n",
+    "    - Robust to noisy training data (especially if we use inverse square of weighted distance as the \"distance\")\n",
+    "    - Computation cost is quite high because we need to compute distance of each query instance to all training samples. Some indexing (e.g. K-D tree) may reduce this computational cost\n",
+    "    - Students having similar data values are likely to have similar result. Hence this model could be really useful.\n",
+    "<br><br>\n",
+    "3. Decision Trees\n",
+    "    - Control System, Financial Analysis - http://www.cbcb.umd.edu/~salzberg/docs/murthy_thesis/survey/node32.html\n",
+    "    - Decision trees require relatively little effort from users for data preparation\n",
+    "    - A drawback of using decision trees is that the outcomes of decisions, subsequent decisions and payoffs may be based primarily on expectations. When actual decisions are made, the payoffs and resulting decisions may not be the same as those we've planned for.\n",
+    "    - It is easy to visualize and once trained gives result in logarithmic time."
    ]
   },
   {
