- Ran 3 different models - Printing F1 score for all the 3 models

--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -355,7 +355,7 @@
     "3. Decision Trees\n",
     "    - Control System, Financial Analysis - http://www.cbcb.umd.edu/~salzberg/docs/murthy_thesis/survey/node32.html\n",
     "    - Decision trees require relatively little effort from users for data preparation\n",
-    "    - A drawback of using decision trees is that the outcomes of decisions, subsequent decisions and payoffs may be based primarily on expectations. When actual decisions are made, the payoffs and resulting decisions may not be the same as those we've planned for.\n",
+    "    - Trusts input data too much (Tends to overfit).\n",
     "    - It is easy to visualize and once trained gives result in logarithmic time."
    ]
   },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -436,34 +436,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training a SVC using a training set size of 100. . .\n",
+      "Trained model in 0.0018 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 0.8633.\n",
+      "Made predictions in 0.0007 seconds.\n",
+      "F1 score for test set: 0.7651.\n",
+      "-\n",
+      "Training a SVC using a training set size of 200. . .\n",
+      "Trained model in 0.0029 seconds\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for training set: 0.8762.\n",
+      "Made predictions in 0.0011 seconds.\n",
+      "F1 score for test set: 0.7848.\n",
+      "-\n",
+      "Training a SVC using a training set size of 296. . .\n",
+      "Trained model in 0.0054 seconds\n",
+      "Made predictions in 0.0043 seconds.\n",
+      "F1 score for training set: 0.8764.\n",
+      "Made predictions in 0.0015 seconds.\n",
+      "F1 score for test set: 0.7871.\n",
+      "-\n",
+      "================================\n",
+      "Training a KNeighborsClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0006 seconds\n",
+      "Made predictions in 0.0013 seconds.\n",
+      "F1 score for training set: 0.7852.\n",
+      "Made predictions in 0.0011 seconds.\n",
+      "F1 score for test set: 0.7222.\n",
+      "-\n",
+      "Training a KNeighborsClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0005 seconds\n",
+      "Made predictions in 0.0023 seconds.\n",
+      "F1 score for training set: 0.8771.\n",
+      "Made predictions in 0.0013 seconds.\n",
+      "F1 score for test set: 0.7867.\n",
+      "-\n",
+      "Training a KNeighborsClassifier using a training set size of 296. . .\n",
+      "Trained model in 0.0006 seconds\n",
+      "Made predictions in 0.0058 seconds.\n",
+      "F1 score for training set: 0.8767.\n",
+      "Made predictions in 0.0018 seconds.\n",
+      "F1 score for test set: 0.7755.\n",
+      "-\n",
+      "================================\n",
+      "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0006 seconds\n",
+      "Made predictions in 0.0002 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0001 seconds.\n",
+      "F1 score for test set: 0.6142.\n",
+      "-\n",
+      "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0002 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0001 seconds.\n",
+      "F1 score for test set: 0.7482.\n",
+      "-\n",
+      "Training a DecisionTreeClassifier using a training set size of 296. . .\n",
+      "Trained model in 0.0015 seconds\n",
+      "Made predictions in 0.0002 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0001 seconds.\n",
+      "F1 score for test set: 0.6406.\n",
+      "-\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Import the three supervised learning models from sklearn\n",
-    "# from sklearn import model_A\n",
-    "# from sklearn import model_B\n",
-    "# from skearln import model_C\n",
+    "from sklearn import svm\n",
+    "from sklearn import neighbors\n",
+    "from sklearn import tree\n",
     "\n",
     "# TODO: Initialize the three models\n",
-    "clf_A = None\n",
-    "clf_B = None\n",
-    "clf_C = None\n",
+    "clf_A = svm.SVC()\n",
+    "clf_B = neighbors.KNeighborsClassifier()\n",
+    "clf_C = tree.DecisionTreeClassifier()\n",
     "\n",
     "# TODO: Set up the training set sizes\n",
-    "X_train_100 = None\n",
-    "y_train_100 = None\n",
+    "X_train_100 = X_train[:100]\n",
+    "y_train_100 = y_train[:100]\n",
     "\n",
-    "X_train_200 = None\n",
-    "y_train_200 = None\n",
+    "X_train_200 = X_train[:200]\n",
+    "y_train_200 = y_train[:200]\n",
     "\n",
-    "X_train_300 = None\n",
-    "y_train_300 = None\n",
+    "X_train_300 = X_train\n",
+    "y_train_300 = y_train\n",
     "\n",
     "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
-    "# train_predict(clf, X_train, y_train, X_test, y_test)"
+    "# train_predict(clf, X_train, y_train, X_test, y_test)\n",
+    "train_predict(clf_A, X_train_100, y_train_100, X_test, y_test)\n",
+    "print '-'\n",
+    "train_predict(clf_A, X_train_200, y_train_200, X_test, y_test)\n",
+    "print '-'\n",
+    "train_predict(clf_A, X_train_300, y_train_300, X_test, y_test)\n",
+    "print '-'\n",
+    "print '================================'\n",
+    "train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)\n",
+    "print '-'\n",
+    "train_predict(clf_B, X_train_200, y_train_200, X_test, y_test)\n",
+    "print '-'\n",
+    "train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)\n",
+    "print '-'\n",
+    "print '================================'\n",
+    "train_predict(clf_C, X_train_100, y_train_100, X_test, y_test)\n",
+    "print '-'\n",
+    "train_predict(clf_C, X_train_200, y_train_200, X_test, y_test)\n",
+    "print '-'\n",
+    "train_predict(clf_C, X_train_300, y_train_300, X_test, y_test)\n",
+    "print '-'"
    ]
   },
   {
@@ -478,29 +570,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Classifer 1 - ?**  \n",
+    "** Classifer 1 - Support Vector Machines (SVM)**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |        EXAMPLE          |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |    EXAMPLE      |\n",
+    "| 100               |         0.0018          |        0.0010          |      0.8633      |     0.7651      |\n",
+    "| 200               |         0.0029          |        0.0020          |      0.8762      |     0.7848      |\n",
+    "| 300               |         0.0054          |        0.0043          |      0.8764      |     0.7871      |\n",
     "\n",
-    "** Classifer 2 - ?**  \n",
-    "\n",
-    "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
-    "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |     EXAMPLE             |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |     EXAMPLE     |\n",
-    "\n",
-    "** Classifer 3 - ?**  \n",
+    "** Classifer 2 - K-Nearest Neighbors (KNeighbors)**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |                         |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |                 |"
+    "| 100               |         0.0006          |         0.0013         |      0.7852      |      0.7222     |\n",
+    "| 200               |         0.0005          |         0.0023         |      0.8771      |      0.7867     |\n",
+    "| 300               |         0.0006          |         0.0058         |      0.8767      |      0.7755     |\n",
+    "\n",
+    "** Classifer 3 - Decision Trees**  \n",
+    "\n",
+    "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
+    "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
+    "| 100               |         0.0006          |         0.0002         |       1.0000     |      0.6142     |\n",
+    "| 200               |         0.0010          |         0.0002         |       1.0000     |      0.7482     |\n",
+    "| 300               |         0.0015          |         0.0002         |       1.0000     |      0.6406     |"
    ]
   },
   {
@@ -559,11 +651,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'best_estimator_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-f8de40c85d5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;31m# Get the estimator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgrid_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_estimator_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;31m# Report the final F1 score for training and testing after parameter tuning\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'best_estimator_'"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Import 'GridSearchCV' and 'make_scorer'\n",
     "\n",
@@ -612,6 +716,15 @@
     "> **Note**: Once you have completed all of the code implementations and successfully answered each question above, you may finalize your work by exporting the iPython Notebook as an HTML document. You can do this by using the menu above and navigating to  \n",
     "**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
